all errors corrected